--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "burger",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "mysql": "^2.17.1",
+    "mysql-sequelize": "^1.0.7"
+  },
+  "devDependencies": {},
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -17,11 +24,5 @@
   "bugs": {
     "url": "https://github.com/zapmi/burger/issues"
   },
-  "homepage": "https://github.com/zapmi/burger#readme",
-  "dependencies": {
-    "express": "^4.17.1",
-    "express-handlebars": "^3.1.0",
-    "mysql": "^2.17.1",
-    "mysql-sequelize": "^1.0.7"
-  }
+  "homepage": "https://github.com/zapmi/burger#readme"
 }
